# farm-automation

./: .cursorrules  .gitignore  Makefile  README.md  alembic.ini  config  cursorRules.md
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt  seed_peripheral_types.py
backend/alembic/: env.py
backend/alembic/versions/: 2986dd0a280c_update_section_model_with_new_fields.py  5bf6fe2a7bdf_add_is_deleted_to_device.py  627ed8f3eed4_add_first_name_last_name_deleted_to_user.py  7369eae75075_add_description_to_tenant.py  7d918655bb47_drop_unique_constraint_on_device_uid_in_.py  8c1fa99a83b7_add_peripheral_type_and_mapping_add_.py  a5569c5fd6a1_add_exclusive_schedule_to_peripheral_.py  cc985a931da8_initial_tables.py  eae7c3484709_change_tenant_status_to_boolean_active.py  f9ddd71613a2_update_farm_model_with_new_fields.py
backend/app/: main.py  mqtt_status_worker.py  seed_superadmin.py
backend/app/api/: __init__.py  deps.py  device.py  farm.py  peripheral.py  schedule.py  section.py  tenant.py  user.py
backend/app/core/: config.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  device.py  device_status.py  farm.py  peripheral.py  schedule.py  section.py  tenant.py  user.py  watering_log.py
backend/app/schemas/: device.py  farm.py  schedule.py  section.py  tenant.py  user.py
backend/app/services/: user_service.py
device-agent/: Dockerfile  README.md  REQUIREMENTS.md  SETUP.md  TODO.md  agent.py  build_deb.sh  package-lock.json  requirements.txt  update_device_agent.sh
docker/: docker-compose.yml
(+9 files in other folders)
